--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZubLab</title>
+    <title>ZubLab.edu.com</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -1850,6 +1850,9 @@
             border-radius: 30px;
             border: none;
             font-weight: 600;
+            margin: 5px;
+            transition: cubic-bezier(0.19, 1, 0.22, 1);
+            cursor: all-scroll;
         }
     </style>
 </head>
