--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZubLab.edu.com</title>
+    <title>ZubLab</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -1854,6 +1854,15 @@
             transition: cubic-bezier(0.19, 1, 0.22, 1);
             cursor: all-scroll;
         }
+        .bac-btn{
+            background-color: #0f9d58;
+            border: none;
+            color: white;
+            padding: 5px;
+            border-top-right-radius:5px ;
+            border-bottom-left-radius:20px ;
+
+        }
     </style>
 </head>
 <body>
@@ -1885,7 +1894,7 @@
         <section class="right-section">
             <!-- Back Button -->
             <div class="back-button-container">
-                <a href="index.html"><button id="back-to-home" class="back-button">
+                <a href="index.html"><button class="bac-btn">
                     <i class="fas fa-arrow-left"></i> <span id="back-text">Back</span>
                 </button></a>
             </div>
