--- a/studentid.html
+++ b/studentid.html
@@ -1876,7 +1876,7 @@
         function enableAssessmentButtons() {
             // Arabic button
             const arabicBtn = document.getElementById("arabic-btn");
-            arabicBtn.className = "kobo-link";
+            arabicBtn.className = "https://zubairslaboratory-create.github.io/zublab.edu.com/";
             arabicBtn.innerHTML = '<i class="fas fa-external-link-alt"></i> Start Arabic Assessment on KoboCollect';
             arabicBtn.onclick = function() { 
                 window.open(koboLinks.arabic, '_blank'); 
@@ -1933,3 +1933,4 @@
     </script>
 </body>
 </html>
+
