--- a/dashboard.html
+++ b/dashboard.html
@@ -1863,6 +1863,17 @@
             border-bottom-left-radius:20px ;
 
         }
+        h3{
+              font-family: 'Times New Roman', Times, serif;
+              font-size: 20px;
+              font-weight: 700;
+        }
+        .qr img{
+            background-color: #0f9d58;
+            border-radius: 20px;
+            width: 100px;
+            height: 100px;
+        }
     </style>
 </head>
 <body>
@@ -2234,7 +2245,8 @@
                             <h4><i class="fas fa-phone"></i> <span data-key="phoneSupport">Phone Support</span></h4>
                             <p data-key="phoneSupportDesc">Call us during business hours for immediate assistance.</p>
                             <div class="contact-details">
-                                <p><i class="fas fa-phone"></i> +880 1812018842 (Whatsapp)</p>
+                                <div class="qr"><h3>WhatsApp</h3>
+                                <img src="qr.jpg"></div>
                                 <p><i class="fas fa-clock"></i> <span data-key="businessHours">Mon-Fri: 9AM-5PM (GMT+6)</span></p>
                             </div>
                         </div>
@@ -2254,8 +2266,8 @@
                             <h4><i class="fas fa-map-marker-alt"></i> <span data-key="officeAddress">Office Address</span></h4>
                             <p data-key="officeAddressDesc">Visit our office for in-person support and consultations.</p>
                             <div class="contact-details">
-                                <p><i class="fas fa-map-pin"></i> <span data-key="addressLine1">123 Learning Street</span></p>
-                                <p><i class="fas fa-city"></i> <span data-key="addressLine2">Education City, BD 1200</span></p>
+                                <p><i class="fas fa-map-pin"></i> <span data-key="addressLine1">Rohingya Refugee Camp</span></p>
+                                <p><i class="fas fa-city"></i> <span data-key="addressLine2">Balukhali,Camp-09</span></p>
                             </div>
                         </div>
                     </div>
@@ -2779,7 +2791,7 @@
                 contactDescription: "Get in touch with our support team for any questions, issues, or feedback.",
                 emailSupport: "Email Support",
                 emailSupportDesc: "Send us an email and we'll respond within 24 hours.",
-                responseTime: "Response time: 24 hours",
+                responseTime: "Response time: 7AM to 10PM",
                 phoneSupport: "Phone Support",
                 phoneSupportDesc: "Call us during business hours for immediate assistance.",
                 businessHours: "Mon-Fri: 9AM-5PM (GMT+6)",
@@ -2789,8 +2801,8 @@
                 averageWait: "Average wait: 5 minutes",
                 officeAddress: "Office Address",
                 officeAddressDesc: "Visit our office for in-person support and consultations.",
-                addressLine1: "123 Learning Street",
-                addressLine2: "Education City, BD 1200",
+                addressLine1: "Rohingya Refugee Camp",
+                addressLine2: "Balukhli,Camp-09",
                 sendMessage: "Send us a Message",
                 fullName: "Full Name",
                 emailAddress: "Email Address",
@@ -4790,3 +4802,4 @@
     </script>
 </body>
 </html>
+
