--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZubLab - Fun Learning for Kids</title>
+    <title>ZubLab.edu.com</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -716,7 +716,7 @@
         <section class="characters">
             <div class="character">
                 <div class="character-img zubby">
-                    <i class="fas fa-book"></i>
+                    <i class="fas fa-book-quran"></i>
                 </div>
                 <h3>Arabic</h3>
                 <p>Learn Quranic Arabic with proper Tajweed</p>
@@ -732,7 +732,7 @@
             
             <div class="character">
                 <div class="character-img prof">
-                    <i class="fas fa-lightbulb"></i>
+                    <i class="fas fa-book"></i>
                 </div>
                 <h3>Rohingya</h3>
                 <p>Preserve cultural heritage and language</p>
