--- a/studentid.html
+++ b/studentid.html
@@ -1113,7 +1113,7 @@
         <!-- Dashboard Navigation -->
         <div class="dashboard-nav">
             <button class="nav-btn active" data-section="zoom-classes">
-                <i class="fas fa-video"></i> Zoom Classes
+                <i class="fas fa-video"></i> MS Teams Classes
             </button>
             <button class="nav-btn" data-section="assessment-portal">
                 <i class="fas fa-language"></i> Language Assessment
@@ -1139,8 +1139,8 @@
                     <div class="week-navigation" id="weekNavigation"></div>
                     
                     <div class="message info">
-                        <p><i class="fas fa-info-circle"></i> Click "Join Class" to open the Zoom meeting. Make sure Zoom is installed on your device.</p>
-                        <a href="https://play.google.com/store/apps/details?id=us.zoom.videomeetings"><button class="dwn">Download Zoom App</button></a>
+                        <p><i class="fas fa-info-circle"></i> Click "Join Class" to open the MS Teams class. Make sure MS Teams is installed on your device.</p>
+                        <a href="https://play.google.com/store/apps/details?id=com.microsoft.teams"><button class="dwn">Download Teams App</button></a>
                     </div>
                     
                     <div class="loading" id="classesLoading">
@@ -1564,9 +1564,9 @@
                 days: [0, 1],
                 time: "15:40",
                 duration: "1h 30m",
-                zoomLink: "https://us05web.zoom.us/j/4868720477?pwd=XNvJy2vtTmxu0VccLBpy23eNlKU2HW.1.1",
-                meetingId: "6499684143",
-                password: "ATWnt",
+                zoomLink: "https://teams.live.com/meet/9322620893301?p=4wscIxjczj7tOLyN80",
+                meetingId: "932 262 089 330 1",
+                password: "Pc2Mj9",
                 description: "Learn reading Quran and Qaida"
             },
             {
@@ -1577,9 +1577,9 @@
                 days: [2, 3],
                 time: "15:40",
                 duration: "1h 30m",
-                zoomLink: "https://us05web.zoom.us/j/4868720477?pwd=XNvJy2vtTmxu0VccLBpy23eNlKU2HW.1",
-                meetingId: "6499684143",
-                password: "ATWnt",
+                zoomLink: "https://teams.live.com/meet/9322620893301?p=4wscIxjczj7tOLyN80",
+                meetingId: "932 262 089 330 1",
+                password: "Pc2Mj9",
                 description: "Learn English Zero To Hero"
             },
             {
@@ -1590,9 +1590,9 @@
                 days: [6],
                 time: "15:40",
                 duration: "1h 30m",
-                zoomLink: "https://us05web.zoom.us/j/4868720477?pwd=XNvJy2vtTmxu0VccLBpy23eNlKU2HW.1",
-                meetingId: "6499684143",
-                password: "ATWnt",
+                zoomLink: "https://teams.live.com/meet/9322620893301?p=4wscIxjczj7tOLyN80",
+                meetingId: "932 262 089 330 1",
+                password: "Pc2Mj9",
                 description: "Learn your mother tongue"
             }
         ];
