--- a/dashboard.html
+++ b/dashboard.html
@@ -2016,13 +2016,13 @@
 
             <div class="sidebar-menu">
                 <a href="#" class="menu-item active" data-page="dashboard">
-                    <i class="fas fa-tachometer-alt"></i> <span class="menu-text" data-key="dashboard">Home</span>
+                    <i class="fas fa-home"></i> <span class="menu-text" data-key="dashboard">Home</span>
                 </a>
                 <a href="#" class="menu-item" data-page="courses">
                     <i class="fas fa-book-open"></i> <span class="menu-text" data-key="courses">Courses</span>
                 </a>
                 <a href="#" class="menu-item" data-page="assignments">
-                    <i class="fas fa-language"></i> <span class="menu-text" data-key="assignments">Assignments</span>
+                    <i class="fas fa-award"></i> <span class="menu-text" data-key="assignments">Assignments</span>
                 </a>
                 <a href="#" class="menu-item" data-page="grades">
                     <i class="fas fa-chart-line"></i> <span class="menu-text" data-key="grades">Grades</span>
