--- a/dashboard.html
+++ b/dashboard.html
@@ -2493,7 +2493,7 @@
                     <i class="fas fa-award"></i> <span class="menu-text" data-key="assignments">Assignments</span>
                 </a>
                 <a href="#" class="menu-item" data-page="grades">
-                    <i class="fas fa-newspaper"></i> <span class="menu-text" data-key="feed">Announcement</span>
+                    <i class="fas fa-bullhorn"></i> <span class="menu-text" data-key="feed">Announcements</span>
                 </a>
                 <a href="#" class="menu-item" data-page="calendar">
                     <i class="fas fa-calendar-alt"></i> <span class="menu-text" data-key="calendar">Calendar</span>
@@ -3071,7 +3071,7 @@
                 <div class="feed-container">
                     <div class="feed-header">
                         <div class="feed-title">
-                            <i class="fas fa-newspaper"></i>
+                            <i class="fas fa-bullhorn"></i>
                             <h2>Announcements</h2>
                         </div>
                         <div class="feed-stats">
@@ -3302,7 +3302,7 @@
                 dashboard: "Home",
                 courses: "Classes",
                 assignments: "Languages",
-                grades: "Announcement",
+                grades: "Announcements",
                 calendar: "Calendar",
                 contactUs: "Contact Us",
                 viewInstructor: "View Instructor",
