--- a/dashboard.html
+++ b/dashboard.html
@@ -2490,7 +2490,7 @@
                     <i class="fas fa-book-open"></i> <span class="menu-text" data-key="courses">Courses</span>
                 </a>
                 <a href="#" class="menu-item" data-page="assignments">
-                    <i class="fas fa-award"></i> <span class="menu-text" data-key="assignments">Assignments</span>
+                    <i class="fas fa-award"></i> <span class="menu-text" data-key="assignments">Languages</span>
                 </a>
                 <a href="#" class="menu-item" data-page="grades">
                     <i class="fas fa-bullhorn"></i> <span class="menu-text" data-key="feed">Announcements</span>
