--- a/studentid.html
+++ b/studentid.html
@@ -2093,12 +2093,12 @@
         // Assessment dates - UPDATED as per requirements
         const assessmentSchedule = {
             arabic: {
-                start: new Date('December 13, 2025 16:00:00'), // 4:00 PM
-                end: new Date('December 13, 2025 18:00:00')    // 6:00 PM
+                start: new Date('December 27, 2025 13:10:00'), // 4:00 PM
+                end: new Date('December 27, 2025 13:50:00')    // 6:00 PM
             },
             english: {
-                start: new Date('December 14, 2025 16:00:00'), // 4:00 PM
-                end: new Date('December 14, 2025 18:00:00')    // 6:00 PM
+                start: new Date('December 20, 2025 18:50:00'), // 4:00 PM
+                end: new Date('December 20, 2025 19:10:00')    // 6:00 PM
             },
             rohingya: {
                 start: new Date('December 15, 2025 16:00:00'), // 4:00 PM
@@ -2114,24 +2114,24 @@
                     description: "Complete Arabic grammar reference for beginners to advanced learners",
                     type: "pdf",
                     size: "4.2 MB",
-                    url: "https://example.com/arabic-grammar.pdf",
-                    previewUrl: "https://example.com/preview/arabic-grammar"
+                    url: "#",
+                    previewUrl: "#"
                 },
                 {
                     title: "Pronunciation Videos",
                     description: "20 video lessons covering Arabic pronunciation and phonetics",
                     type: "video",
-                    size: "120 MB",
-                    url: "https://example.com/arabic-pronunciation.zip",
-                    previewUrl: "https://youtube.com/playlist?list=arabic-pronunciation"
+                    size: "12 MB",
+                    url: "#",
+                    previewUrl: "#"
                 },
                 {
                     title: "Practice Worksheets",
                     description: "Downloadable exercises for Arabic writing and grammar practice",
                     type: "document",
                     size: "2.8 MB",
-                    url: "https://example.com/arabic-worksheets.pdf",
-                    previewUrl: "https://example.com/preview/arabic-worksheets"
+                    url: "#",
+                    previewUrl: "#"
                 },
                 {
                     title: "Quran Reading Guide",
